<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.3</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>io.github.ih0rd.examples</groupId>
    <artifactId>polyglot-springboot-example</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>polyglot-springboot-example</name>
    <description>polyglot-springboot-example</description>
    <properties>
        <java.version>25</java.version>
        <polyglot.version>0.3.0-SNAPSHOT</polyglot.version>
        <!-- Python packages for GraalPy -->
        <python.package.1>faker==26.0.0</python.package.1>
        <python.package.2>tabulate==0.9.0</python.package.2>
        <python.package.3>numpy==2.2.4</python.package.3>

        <!-- GraalVM / GraalPy -->
        <graal.version>25.0.2</graal.version>
        <graalpy-plugin.version>25.0.2</graalpy-plugin.version>

    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.github.ih0r-d</groupId>
                <artifactId>polyglot-bom</artifactId>
                <version>${polyglot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>io.github.ih0r-d</groupId>
            <artifactId>polyglot-spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.graalvm.python</groupId>
            <artifactId>python-launcher</artifactId>
            <version>${graal.version}</version>
        </dependency>
        <dependency>
            <groupId>org.graalvm.python</groupId>
            <artifactId>python-embedding</artifactId>
            <version>${graal.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <jvmArguments>
                        --enable-native-access=ALL-UNNAMED
                        --sun-misc-unsafe-memory-access=allow
                    </jvmArguments>
                </configuration>
            </plugin>
          <plugin>
            <groupId>org.graalvm.python</groupId>
            <artifactId>graalpy-maven-plugin</artifactId>
            <version>${graalpy-plugin.version}</version>
            <configuration>
              <packages>
                <package>${python.package.1}</package>
                <package>${python.package.2}</package>
                <package>${python.package.3}</package>
              </packages>
            </configuration>
            <executions>
              <execution>
                <id>lock-python-packages</id>
                <phase>generate-resources</phase>
                <goals>
                  <goal>lock-packages</goal>
                </goals>
              </execution>
              <execution>
                <id>generate-python-resources</id>
                <phase>generate-resources</phase>
                <goals>
                  <goal>process-graalpy-resources</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
    </build>

</project>
